fix center-align

--- a/src/components/styling/Unauthorized.scss
+++ b/src/components/styling/Unauthorized.scss
@@ -18,7 +18,7 @@ $fire-reverse:#EFAC41, #DE8531, #6C1305, black;
   }
 }
  
-.container {
+.mayo {
   background-color: $white;
   color: $black;
   text-align: center;
